--- a/q9.ipynb
+++ b/q9.ipynb
@@ -2,111 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "b8d12b1b",
+   "execution_count": 5,
+   "id": "11a8f54e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "John has checked out The Great Gatsby by F. Scott Fitzgerald.\n",
-      "The Great Gatsby by F. Scott Fitzgerald has been checked out to John.\n",
-      "Emily has checked out To Kill a Mockingbird by Harper Lee.\n",
-      "To Kill a Mockingbird by Harper Lee has been checked out to Emily.\n",
-      "Michael has checked out 1984 by George Orwell.\n",
-      "1984 by George Orwell has been checked out to Michael.\n",
-      "John has returned The Great Gatsby by F. Scott Fitzgerald.\n",
-      "The Great Gatsby by F. Scott Fitzgerald has been returned.\n",
-      "Emily has returned To Kill a Mockingbird by Harper Lee.\n",
-      "To Kill a Mockingbird by Harper Lee has been returned.\n",
-      "John's checked out books: \n",
-      "Emily's checked out books: \n",
-      "Michael's checked out books: 1984 by George Orwell\n"
+      "Reverse Guess-the-Number Game\n",
+      "Think of a number and let me guess it!\n",
+      "Enter the smaller number: 7\n",
+      "Enter the larger number: 8\n",
+      "Is your number 7?\n",
+      "Enter =, <, or >: <\n",
+      "You're cheating! The number of incorrect guesses reached the maximum.\n"
      ]
     }
    ],
    "source": [
-    "class Book:\n",
-    "    def __init__(self, title, author):\n",
-    "        self.title = title\n",
-    "        self.author = author\n",
-    "        self.checked_out_to = None\n",
-    "        self.waiting_list = []\n",
+    "import math\n",
     "\n",
-    "    def check_out(self, patron):\n",
-    "        if self.checked_out_to is None:\n",
-    "            self.checked_out_to = patron\n",
-    "            patron.check_out_book(self)\n",
-    "            print(f\"{self.title} by {self.author} has been checked out to {patron.name}.\")\n",
+    "def reverse_guess_number():\n",
+    "    print(\"Reverse Guess-the-Number Game\")\n",
+    "    print(\"Think of a number and let me guess it!\")\n",
+    "    \n",
+    "    lower_bound = int(input(\"Enter the smaller number: \"))\n",
+    "    upper_bound = int(input(\"Enter the larger number: \"))\n",
+    "    max_guesses = math.ceil(math.log2(upper_bound - lower_bound + 1))\n",
+    "    num_guesses = 0\n",
+    "    \n",
+    "    while True:\n",
+    "        guess = (lower_bound + upper_bound) // 2\n",
+    "        print(f\"Is your number {guess}?\")\n",
+    "        \n",
+    "        response = input(\"Enter =, <, or >: \")\n",
+    "        num_guesses += 1\n",
+    "        \n",
+    "        if response == '=':\n",
+    "            print(f\"Hooray, I've got it in {num_guesses} tries!\")\n",
+    "            break\n",
+    "        elif response == '<':\n",
+    "            upper_bound = guess - 1\n",
+    "        elif response == '>':\n",
+    "            lower_bound = guess + 1\n",
     "        else:\n",
-    "            self.waiting_list.append(patron)\n",
-    "            print(f\"{self.title} by {self.author} is currently checked out. Added {patron.name} to the waiting list.\")\n",
+    "            print(\"Invalid response. Please enter =, <, or >.\")\n",
+    "        \n",
+    "        if num_guesses == max_guesses:\n",
+    "            print(\"You're cheating! The number of incorrect guesses reached the maximum.\")\n",
+    "            break\n",
     "\n",
-    "    def return_book(self):\n",
-    "        if self.checked_out_to is not None:\n",
-    "            patron = self.checked_out_to\n",
-    "            self.checked_out_to = None\n",
-    "            patron.return_book(self)\n",
-    "            print(f\"{self.title} by {self.author} has been returned.\")\n",
-    "            if self.waiting_list:\n",
-    "                next_patron = self.waiting_list.pop(0)\n",
-    "                self.check_out(next_patron)\n",
-    "        else:\n",
-    "            print(f\"{self.title} by {self.author} is not currently checked out.\")\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return f\"{self.title} by {self.author}\"\n",
-    "\n",
-    "\n",
-    "class Patron:\n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
-    "        self.checked_out_books = {}\n",
-    "\n",
-    "    def check_out_book(self, book):\n",
-    "        if len(self.checked_out_books) < 3:\n",
-    "            self.checked_out_books[book.title] = book\n",
-    "            print(f\"{self.name} has checked out {book}.\")\n",
-    "        else:\n",
-    "            print(f\"{self.name} has reached the maximum limit of checked out books.\")\n",
-    "\n",
-    "    def return_book(self, book):\n",
-    "        if book.title in self.checked_out_books:\n",
-    "            del self.checked_out_books[book.title]\n",
-    "            print(f\"{self.name} has returned {book}.\")\n",
-    "        else:\n",
-    "            print(f\"{self.name} does not have {book} checked out.\")\n",
-    "\n",
-    "    def __str__(self):\n",
-    "        return self.name\n",
-    "\n",
-    "\n",
-    "\n",
-    "book1 = Book(\"The Great Gatsby\", \"F. Scott Fitzgerald\")\n",
-    "book2 = Book(\"To Kill a Mockingbird\", \"Harper Lee\")\n",
-    "book3 = Book(\"1984\", \"George Orwell\")\n",
-    "\n",
-    "patron1 = Patron(\"John\")\n",
-    "patron2 = Patron(\"Emily\")\n",
-    "patron3 = Patron(\"Michael\")\n",
-    "\n",
-    "book1.check_out(patron1)\n",
-    "book2.check_out(patron2)\n",
-    "book3.check_out(patron3)\n",
-    "\n",
-    "book1.return_book()\n",
-    "book2.return_book()\n",
-    "\n",
-    "print(f\"{patron1}'s checked out books:\", \", \".join(str(book) for book in patron1.checked_out_books.values()))\n",
-    "print(f\"{patron2}'s checked out books:\", \", \".join(str(book) for book in patron2.checked_out_books.values()))\n",
-    "print(f\"{patron3}'s checked out books:\", \", \".join(str(book) for book in patron3.checked_out_books.values()))\n"
+    "if __name__ == '__main__':\n",
+    "    reverse_guess_number()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4417eb",
+   "id": "b580c73e",
    "metadata": {},
    "outputs": [],
    "source": []
